book/tests/snapshots/snapshot__run_reference_prql@functions-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/functions-0.prql
---
SELECT
  *,
  (temp_f - 32) * 3 AS temp_c
FROM
  cities
