book/tests/snapshots/snapshot__run_reference_prql@functions-1.prql-2.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/semantics/functions-1.prql
---
SELECT
  employees.*
FROM
  employees
WHERE
  age > 50
ORDER BY
  name
