book/tests/snapshots/snapshot__run_reference_prql@functions-3.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/functions-3.prql
---
SELECT
  *,
  (temp_f - 32) * 3 AS temp_c
FROM
  cities
