book/tests/snapshots/snapshot__run_reference_prql@functions-4.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/functions-4.prql
---
SELECT
  kettles.*,
  ((temp_c - 32) * 3 - 0) / (100 - 0) AS boiling_proportion
FROM
  kettles
