book/tests/snapshots/snapshot__run_reference_prql@join-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/join-1.prql
---
SELECT
  employees.*,
  positions.*
FROM
  employees FULL
  JOIN positions ON employees.emp_no = positions.emp_no
