book/tests/snapshots/snapshot__run_reference_prql@list-equivalence-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/list-equivalence-0.prql
---
SELECT
  salary
FROM
  employees
