book/tests/snapshots/snapshot__run_reference_prql@list-equivalence-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/examples/list-equivalence-1.prql
---
SELECT
  salary
FROM
  employees
